--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,16 @@ dependencies:
   lottie: 3.1.0
   sqflite: ^2.3.3
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    
+  flutter_launcher_icons: ^0.13.1
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "Assets/getx.png"
+  adaptive_icon_background: "#ffffff" 
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
